--- a/qr_reader.html
+++ b/qr_reader.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="qr_reader.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   </head>
   <body>
     <div class="wrapper">
